--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>h5editor</title>
+    <meta id="viewport" name="viewport" content="width=320, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="renderer" content="webkit">
+    <meta name="keywords" content="h5editor vue alvin 易企秀">
+    <meta name="description" content="基于vue2实现的仿易企秀简易版h5编辑器">
   </head>
   <body>
     <div id="app"></div>
