add mobile listener

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>h5editor</title>
-    <meta id="viewport" name="viewport" content="width=320, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!-- <meta id="viewport" name="viewport" content="width=320, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
     <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="edge" />
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <div class="landscape-show">
+      <p>请使用移动终端竖屏浏览,体验更佳</p>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
